--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,22 @@
 {
-  "$schema": "https://json.schemastore.org/web-manifest-combined.json",
-  "name": "WEBAPP",
-  "short_name": "WEBAPP",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#fff",
-  "description": "A readable Hacker News app.",
-  "icons": [{
-    "src": "img/item01.png",
-    "sizes": "48x48",
-    "type": "image/png"
-  },]
+  "short_name": "Apiki Blog",
+  "name": "Blog sobre WordPress da Apiki",
+  "icons": [
+    {
+      "src": "icon-1x.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "icon-2x.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "4x.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    }
+  ],
+  "start_url": "https://blog.apiki.com/?pwa_launcher=true"
 }
