--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "short_name": "Teste GPS",
-  "name": "",
+  "name": "Teste GPS",
   "icons": [
     {
-      "src": "favicon.ico",
-      "type": "image/ico",
+      "src": "/img/logo jpeg",
+      "type": "image/jpeg",
       "sizes": "48x48"
     },
   ],
