--- a/manifest.json
+++ b/manifest.json
@@ -2,4 +2,12 @@
   "short_name": "Teste GPS",
   "name": "Teste GPS",
   "display" : "fullscreen"
+  "icons": [
+    {
+      "src": "/favicon.ico",
+      "type": "image/x-icon",
+      "sizes": "48x48"
+    },
+  ],
+  "start_url": "https://mapa-php.herokuapp.com/"
 }
